user repository, create new user, user login completed

--- a/CQRS.Application/CQRS.Application.csproj
+++ b/CQRS.Application/CQRS.Application.csproj
@@ -21,4 +21,13 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DIRegister\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CQRS.Domain\CQRS.Domain.csproj" />
+    <ProjectReference Include="..\CQRS.Infrastructure\CQRS.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
