create new user and user login compeleted

--- a/CQRS.API/appsettings.json
+++ b/CQRS.API/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MainDataBase": "Data Source=.\\SQL2019;initial catalog = SampleDb;integrated security=True;MultipleActiveResultSets=True ; TrustServerCertificate=True"
+  },
+  "Configs": {
+    "ValidAudience": "http://localhost:7046",
+    "ValidIssuer": "http://localhost:7046",
+    "TokenKey": "REUS IY T79G YU PUBL BAR REJCFY SLN OAKFNS, DEILOCX PV KZQM ALFU KFI ALFUCT, OA KFM MC PDH LCJFUD",
+    "TokenTimeOut": "5",
+    "RefreshTokenTimeOut": "15"
+  },
   "AllowedHosts": "*"
 }
